force-app/main/default/objects/InsurancePolicyParticipant/InsurancePolicyParticipant.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>