force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_cd_carteira__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_carteira__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cartão de Identificação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>