force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_cod_benef__c.field-meta.xml
<CustomField>
    <fullName>braseg_cod_benef__c</fullName>
    <description>O código de beneficios, o qual, representam um fundo de investimento e regime tributário</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>O código de beneficios, o qual, representam um fundo de investimento e regime tributário</inlineHelpText>
    <label>Beneficio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>