force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_dt_inicio_sub__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_inicio_sub__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data de Início da Subfatura</label>
    <type>Date</type>
</CustomField>