force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_matr_holding__c.field-meta.xml
<CustomField>
    <fullName>braseg_matr_holding__c</fullName>
    <formula>InsurancePolicy.braseg_matr_holding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricula Holding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>