force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_nm_holding__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_holding__c</fullName>
    <formula>InsurancePolicy.NameInsured.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Holding</label>
    <type>Text</type>
</CustomField>