force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_nr_proposta__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_proposta__c</fullName>
    <description>Numero da Proposta</description>
    <inlineHelpText>Numero da Proposta</inlineHelpText>
    <label>Numero Proposta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>