force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_ramo__c.field-meta.xml
<CustomField>
    <fullName>braseg_ramo__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>VIDA</fullName>
            </value>
            <value>
                <fullName>SAUDE</fullName>
            </value>
            <value>
                <fullName>DENTAL</fullName>
            </value>
            <value>
                <fullName>PREV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>