force-app/main/default/objects/InsurancePolicyParticipant/fields/braseg_subf__c.field-meta.xml
<CustomField>
    <fullName>braseg_subf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subfatura</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes da apólice de seguro (Subfatura)</relationshipLabel>
    <relationshipName>Participantes_da_ap_lice_de_seguro</relationshipName>
    <type>Lookup</type>
</CustomField>