force-app/main/default/objects/InsurancePolicyParticipant/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identificador Externo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>