force-app/main/default/objects/InsurancePolicyParticipant/recordTypes/BRASEG_BENEFICIARIO.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_BENEFICIARIO</fullName>
    <active>true</active>
    <label>Beneficiario</label>
</RecordType>