force-app/main/default/objects/InsurancePolicyParticipant/listViews/All_InsurancePolicyParticipants.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicyParticipants</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos os Participantes da política de seguro</label>
</ListView>